fix: spacing between code blocks with file names

--- a/src/Web/assets/typography.css
+++ b/src/Web/assets/typography.css
@@ -7,6 +7,10 @@
 		@apply !mt-0;
 	}
 
+	.has-pre {
+		@apply my-0;
+	}
+
 	code {
 		&::before,
 		&::after {
